--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ header: False
     <div class="hero-container">
       <img src="{{ site.avatar }}" alt="author thumb" class="dot">
       <h1>Videsh Suman</h1>
-      <h3>Hi! I'm <strong itemprop="name">Videsh</strong>. Thanks for landing at my space.</h3>
-      <h3>Machine Learning. Food. Music.</h3>
+      <h3>Hi! I'm <strong itemprop="name">Videsh</strong>. Thanks for landing into my space. Let's get to <a href="/about">know me</a>.</h3>
+      <h3></h3>
 		
       {% include landing_social.html %}
     </div>
