--- a/research/index.html
+++ b/research/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-
-<h2>Projects</h2>
+<br/>
+<h2>Research Experience</h2>
 {% for post in site.posts %}
 	<div class="blog_ele">
 		<a href="{{ post.url | prepend: site.baseurl }}">
